--- a/pv_inverter/packages/deye_hybrid_1p/grid.yaml
+++ b/pv_inverter/packages/deye_hybrid_1p/grid.yaml
@@ -32,16 +32,16 @@ sensor:
     value_type: S_WORD
     icon: "mdi:transmission-tower"
 
-  - platform: modbus_controller
-    modbus_controller_id: ${modbus_controller_id}
-    name: "Grid L2 Power"
-    register_type: holding
-    address: 168
-    unit_of_measurement: "W"
-    device_class: power
-    accuracy_decimals: 0
-    value_type: S_WORD
-    icon: "mdi:transmission-tower"
+#  - platform: modbus_controller
+#    modbus_controller_id: ${modbus_controller_id}
+#    name: "Grid L2 Power"
+#    register_type: holding
+#    address: 168
+#    unit_of_measurement: "W"
+#    device_class: power
+#    accuracy_decimals: 0
+#    value_type: S_WORD
+#    icon: "mdi:transmission-tower"
 
   - platform: modbus_controller
     modbus_controller_id: ${modbus_controller_id}
@@ -81,19 +81,19 @@ sensor:
     value_type: U_WORD
     icon: "mdi:sine-wave"
 
-  - platform: modbus_controller
-    modbus_controller_id: ${modbus_controller_id}
-    name: "Grid L2 Voltage"
-    id: grid_voltage_l2
-    register_type: holding
-    address: 151
-    unit_of_measurement: "V"
-    device_class: voltage
-    accuracy_decimals: 1
-    filters:
-      - multiply: 0.1
-    value_type: U_WORD
-    icon: "mdi:sine-wave"
+#  - platform: modbus_controller
+#    modbus_controller_id: ${modbus_controller_id}
+#    name: "Grid L2 Voltage"
+#    id: grid_voltage_l2
+#    register_type: holding
+#    address: 151
+#    unit_of_measurement: "V"
+#    device_class: voltage
+#    accuracy_decimals: 1
+#    filters:
+#      - multiply: 0.1
+#    value_type: U_WORD
+#    icon: "mdi:sine-wave"
 
   - platform: modbus_controller
     modbus_controller_id: ${modbus_controller_id}
@@ -211,16 +211,16 @@ sensor:
     value_type: S_WORD
     icon: "mdi:transmission-tower"
 
-  - platform: modbus_controller
-    modbus_controller_id: ${modbus_controller_id}
-    name: "External CT L2 Power"
-    register_type: holding
-    address: 171
-    unit_of_measurement: "W"
-    device_class: power
-    accuracy_decimals: 0
-    value_type: S_WORD
-    icon: "mdi:transmission-tower"
+#  - platform: modbus_controller
+#    modbus_controller_id: ${modbus_controller_id}
+#    name: "External CT L2 Power"
+#    register_type: holding
+#    address: 171
+#    unit_of_measurement: "W"
+#    device_class: power
+#    accuracy_decimals: 0
+#    value_type: S_WORD
+#    icon: "mdi:transmission-tower"
 
   - platform: modbus_controller
     modbus_controller_id: ${modbus_controller_id}
@@ -247,19 +247,19 @@ sensor:
     value_type: S_WORD
     icon: "mdi:transmission-tower"
 
-  - platform: modbus_controller
-    modbus_controller_id: ${modbus_controller_id}
-    name: "External CT L2 Current"
-    id: external_ct_l2_current
-    register_type: holding
-    address: 163
-    unit_of_measurement: "A"
-    device_class: current
-    accuracy_decimals: 2
-    filters:
-      - multiply: 0.01
-    value_type: S_WORD
-    icon: "mdi:transmission-tower"
+#  - platform: modbus_controller
+#    modbus_controller_id: ${modbus_controller_id}
+#    name: "External CT L2 Current"
+#    id: external_ct_l2_current
+#    register_type: holding
+#    address: 163
+#    unit_of_measurement: "A"
+#    device_class: current
+#    accuracy_decimals: 2
+#    filters:
+#      - multiply: 0.01
+#    value_type: S_WORD
+#    icon: "mdi:transmission-tower"
 
 select:
   - platform: modbus_controller
@@ -374,4 +374,5 @@ number:
     address: 290
     value_type: U_WORD
     icon: "mdi:sine-wave"
+
 
